tests/NormalTests/paczka1/small_fuzzy/25860484.err
Error in line 1: zNO6caZs S278 39,8
Error in line 10: 5CI23 S261 89,9
Error in line 13: zNO6caZs A758 31,4
